Bug 256466 - Fix various -Werror build failures
Summary: Fix various -Werror build failures
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-08 08:32 PDT by Michael Catanzaro
Modified: 2023-05-08 08:38 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2023-05-08 08:32:59 PDT
Fix various -Werror build failures
Comment 1 Michael Catanzaro 2023-05-08 08:34:32 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13578
Comment 2 EWS 2023-05-08 08:38:21 PDT
Committed 263801@main (d76f2c41bc3b): <https://commits.webkit.org/263801@main>

Reviewed commits have been landed. Closing PR #13578 and removing active labels.