Fix various -Werror build failures https://bugs.webkit.org/show_bug.cgi?id=256466

Unreviewed build fixes.

Fix unused variable warnings, plus placate Clang's overaggressive
-Wmissing-field-initializers in MiniBrowser.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
* Tools/MiniBrowser/gtk/main.c:
(addSettingsGroupToContext):
* Tools/TestWebKitAPI/Tests/WebCore/FloatSizeTests.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/263801@main